2006-06-01  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/dialogs.c: Fix dialog path warnings for command-line files.


2006-05-31  Nick Treleaven  <nick.treleaven@btinternet.com>

 * scintilla/PlatGTK.cxx:
   Backport a Scintilla fix for crashes with recent GTK+ font issue.
 * src/keyfile.c: Discard old session files also for unsaved documents.


2006-05-30  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/keyfile.c, src/sciwrappers.c, src/sciwrappers.h, src/document.c:
   Scroll session files in view after all resizing of the Scintilla
   widget and rename sci_scroll_to_line.
 * data/filetypes.pascal: Updated identifier styling as highlighting.c.


2006-05-30  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/dialogs.c, src/main.c:
   Removed unneeded function dialogs_show_fifo_error(), fixed small
   memory leak in dialogs_show_question()
 * src/utils.c: Fixed a wrong(non ISO-C) array size allocation,
                improved utils_replace_tabs().
 * src/keybindings.c: Added shortcut for Replace Tabs by Space,
                      extend usage of GEANY_ADD_ACCEL macro.
 * src/prefs.c: Detect duplicate shortcuts and prevent saving them.
 * tagmanager/css.c: Fixed a crash when opening malformed CSS files.


2006-05-29  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/about.c: Added Jacek Wolszczak and Frank Lanitz to the credits.


2006-05-28  Enrico Troeger  <enrico.troeger@uvena.de>

 * configure.in, po/pl.po: Added Polish translation contributed by
                           Jacek Wolszczak.
 * src/dialogs.c, src/utils.c: Made recent files menu item insensitive
                               when the list is empty.


2006-05-26  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/interface.c, src/callbacks.c, src/callbacks.h, geany.glade:
   Fixed nasty hang when closing a tab and both the next tab and the
   first tab files have been externally modified.
 * src/dialogs.c: Add mnemonics to Replace dialog buttons, reorder.