@@ -1,3 +1,8 @@
+2006-06-02  Enrico Troeger  <enrico.troeger@uvena.de>
+
+ * src/highlighting.c, data/filetypes.css: improved colouring
+
+
 2006-06-01  Nick Treleaven  <nick.treleaven@btinternet.com>
 
  * src/dialogs.c: Fix dialog path warnings for command-line files.
